@@ -1,3 +1,7 @@
+2017-05-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* gcc.target/s390/pr80725.c: New test.
+
 2017-05-23  Nathan Sidwell  <nathan@acm.org>
 
 	* g++.dg/lookup/extern-c-hidden.C: New.
