@@ -1,3 +1,10 @@
+2017-05-24  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	PR target/80725
+	* config/s390/s390.c (s390_check_qrst_address): Check incoming
+	address against address_operand predicate.
+	* config/s390/s390.md ("*indirect_jump"): Swap alternatives.
+
 2017-05-24  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* var-tracking.c (track_expr_p): Do not return 0 for tracked record
